# rippy

./: .gitignore  .release-please-config.json  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  build.rs  rust-toolchain.toml
.claude/: settings.json
.claude/commands/: implement-issue.md
.claude/scripts/: load-issue-context.sh
.github/workflows/: ci.yml  pages.yml  release.yml
.tokf/: rewrites.toml
examples/: autopilot.rippy.toml  recommended.rippy  recommended.rippy.toml  review.rippy.toml  structured-matching.rippy.toml
proptest-regressions/: .gitkeep
site/: astro.config.mjs  package-lock.json  package.json
site/public/: CNAME
site/src/content/docs/: index.mdx
site/src/content/docs/about/: comparison.md  faq.md
site/src/content/docs/configuration/: examples.mdx  overview.md  patterns.md  rules.md
site/src/content/docs/getting-started/: claude-code.md  codex.md  cursor.md  gemini-cli.md  installation.md  packages.md
site/src/content/docs/reference/: cli-commands.md  file-analysis.md  handlers.md  safety-model.md
site/src/styles/: custom.css
src/: allowlists.rs  analyzer.rs  ast.rs  cc_permissions.rs  cli.rs  condition.rs  config.rs  debug_cmd.rs  discover.rs  environment.rs  error.rs  git_styles.rs  inspect.rs  lib.rs  list.rs  logging.rs  main.rs  migrate.rs  mode.rs  node_safety.rs  packages.rs  parser.rs  pattern.rs  payload.rs  perl_safety.rs  profile_cmd.rs  python_safety.rs  resolve.rs  risk.rs  ruby_safety.rs  rule_cmd.rs  self_protect.rs  sessions.rs  sql.rs  stats.rs  stdlib.rs  suggest.rs  toml_config.rs  tracking.rs  trust.rs  (+2 more)
src/config/: loader.rs  matching.rs  mod.rs  parser.rs  sources.rs  string_loader.rs  types.rs
src/handlers/: ansible.rs  cd.rs  cloud.rs  curl.rs  dangerous.rs  database.rs  docker.rs  env_xargs.rs  file_ops.rs  find.rs  gh.rs  git.rs  helm.rs  misc.rs  mkdir.rs  mod.rs  node.rs  npm.rs  perl.rs  python.rs  python_tools.rs  ruby.rs  shell.rs  simple.rs  system.rs  text_tools.rs  unix_utils.rs
src/setup/: claude_code.rs  cursor.rs  gemini.rs  json_settings.rs  mod.rs  tokf.rs
src/stdlib/: brew.toml  builtins.toml  cargo.toml  dangerous.toml  file_ops.toml  git_cautious.toml  git_permissive.toml  git_standard.toml  interpreters.toml  make.toml  openssl.toml  package_managers.toml  pip.toml  pytest.toml  rustup.toml  simple.toml  ssh.toml  sudo.toml  terraform.toml
tests/: ast_invariants.rs  catalog_runner.rs  commands.rs  config_rules.rs  corner_cases.rs  custom_packages.rs  features.rs  file_access.rs  file_reading.rs  handlers.rs  infrastructure.rs  integration.rs  modes.rs  proptest_robustness.rs  proptest_security.rs  safety.rs  toml_config.rs  trust.rs
tests/common/: mod.rs
tests/data/catalog/: contrast_pairs.toml  injection_constructs.toml  injection_expansion.toml  injection_handlers.toml  injection_operators.toml  safe_handlers.toml  safe_pipelines.toml  safe_quoting.toml  simple_safe.toml
tests/fixtures/: test.rippy
