[package]
name = "rippy-cli"
version = "0.1.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/mpecan/rippy"
description = "A shell command safety hook for AI coding tools (Claude Code, Cursor, Gemini CLI) — Rust rewrite of Dippy"
homepage = "https://github.com/mpecan/rippy"
keywords = ["ai-safety", "claude-code", "shell-hook", "cursor", "gemini-cli"]
categories = ["command-line-utilities", "development-tools"]
readme = "README.md"
rust-version = "1.93"

[[bin]]
name = "rippy"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive", "env"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
rable = "0.1.8"
tokf-hook-types = { path = "../tokf/crates/tokf-hook-types", version = "0.2.37" }
toml = "0.8"

[dev-dependencies]
tempfile = "3"

[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/rippy-cli-v{ version }/rippy-v{ version }-{ target }.tar.gz"
pkg-fmt = "tgz"
bin-dir = "{ bin }{ binary-ext }"

[lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
todo = "deny"
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
must_use_candidate = "allow"
